--- a/nav.html
+++ b/nav.html
@@ -59,7 +59,7 @@
 
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="inbox" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Inbox</a>
+		<a id="project organizer" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Project Organizer</a>
 		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Planner</a>
 		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
 		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
@@ -87,9 +87,9 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "inbox")
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4", '_blank').focus();
+			else if (id == "project organizer")
+				window.open("https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4", '_blank').focus();
 			else if (id == "week")
 				window.open("https://example.com", '_blank').focus();
 			else if (id == "month")
