--- a/nav.html
+++ b/nav.html
@@ -87,9 +87,9 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4", '_parent').focus();
 			else if (id == "project organizer")
-				window.open("https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4", '_parent').focus();
 			else if (id == "week")
 				window.open("https://example.com", '_blank').focus();
 			else if (id == "month")
