--- a/nav.html
+++ b/nav.html
@@ -60,7 +60,7 @@
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
 		<a id="project organizer" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Project Organizer</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> V3</a>
+		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> V4</a>
 		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
 		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
 		<a id="business" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Business</a>
@@ -87,7 +87,7 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				<a href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"></a>
+				<a href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"></a>;
 				//window.open("https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4", '_parent').focus();
 			else if (id == "project organizer")
 				window.open("https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4", '_parent').focus();
