--- a/nav.html
+++ b/nav.html
@@ -58,9 +58,9 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="project organizer" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Project Organizer</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> V4</a>
+		<a id="home" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> <i class="fa-solid fa-house"></i> Home</a>
+		<a id="project organizer" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"> <i class="fa-solid fa-inbox"></i> Project Organizer</a>
+		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> V5</a>
 		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
 		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
 		<a id="business" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Business</a>
@@ -84,7 +84,7 @@
 		}
 
 
-		function navigate(id) {
+		/*function navigate(id) {
 
 			if (id == 'home')
 				<a href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"></a>;
@@ -114,7 +114,7 @@
 			else if (id == "lifewiki")
 				window.open("https://example.com", '_blank').focus();
 
-		}
+		}*/
 	</script>
 
 
