--- a/nav.html
+++ b/nav.html
@@ -58,18 +58,18 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="project organizer" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"> <i class="fa-solid fa-inbox"></i> Project Organizer</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> V5</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
-		<a id="business" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Business</a>
-		<a id="knowledge" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-lightbulb"></i> Knowledge</a>
-		<a id="topics" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-layer-group"></i> Topics</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Notes</a>
-		<a id="media" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bookmark"></i> Media</a>
-		<a id="resourses" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-wrench"></i> Resourses</a>
-		<a id="lifewiki" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart"></i> Lifewiki</a>
+		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> <i class="fa-solid fa-house"></i> Email</a>
+		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"> <i class="fa-solid fa-inbox"></i> Canva</a>
+		<a id="MyASU" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> MyASU</a>
+		<a id="Calendar" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Calendar</a>
+		<a id="Github" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Github</a>
+		<a id="Clients" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Clients</a>
+		<a id="Templates" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-lightbulb"></i> Templates</a>
+		<a id="Squarespace" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-layer-group"></i> Squarespace</a>
+		<a id="Youtube" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Youtube</a>
+		<a id="Pipedrive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bookmark"></i> Pipedrive</a>
+		<a id="LucidChart" onclick="navigate(this.id)" href="#"> </i> LucidChart</a>
+		<a id="Udemy" onclick="navigate(this.id)" href="#"> </i> Udemy</a>
 
 
 
@@ -84,37 +84,36 @@
 		}
 
 
-		/*function navigate(id) {
+		function navigate(id) {
 
-			if (id == 'home')
-				<a href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"></a>;
-				//window.open("https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4", '_parent').focus();
-			else if (id == "project organizer")
-				window.open("https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4", '_parent').focus();
-			else if (id == "week")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "month")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "projects")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "business")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "tasks")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "knowledge")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "topics")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "notes")
-				window.open("https://example.com", '_blank').focus();
-			else if (id == "media")
-				window.open("https://example.com", '_blank').focus();
+			if (id == 'Email')
+				window.open("https://mail.google.com/mail/u/0/", '_blank').focus();
+			else if (id == "Canva")
+				window.open("https://www.canva.com/projects", '_blank').focus();
+			else if (id == "MyASU")
+				window.open("https://webapp4.asu.edu/myasu/", '_blank').focus();
+			else if (id == "Calendar")
+				window.open("https://calendar.google.com/calendar/u/0/r/week", '_blank').focus();
+			else if (id == "Github")
+				window.open("https://github.com/", '_blank').focus();
+			else if (id == "Clients")
+				window.open("https://drive.google.com/drive/u/0/folders/123XoTmFNrVrtGRKtku5j_mZL0N06Fwia", '_blank').focus();
+			else if (id == "Templates")
+				window.open("https://drive.google.com/drive/u/0/folders/1C6Lrcv_SMPbat1KX2C6HP0p7Tox2KfVf", '_blank').focus();
+			else if (id == "Squarespace")
+				window.open("https://account.squarespace.com/", '_blank').focus();
+			else if (id == "Youtube")
+				window.open("https://www.youtube.com/", '_blank').focus();
+			else if (id == "Pipedrive")
+				window.open("https://app.pipedrive.com/auth/login", '_blank').focus();
+			else if (id == "LucidChart")
+				window.open("https://www.lucidchart.com/pages/?", '_blank').focus();
 			else if (id == "resourses")
 				window.open("https://example.com3", '_blank').focus();
-			else if (id == "lifewiki")
-				window.open("https://example.com", '_blank').focus();
+			else if (id == "Udemy")
+				window.open("https://www.udemy.com/", '_blank').focus();
 
-		}*/
+		}
 	</script>
 
 
