--- a/nav.html
+++ b/nav.html
@@ -58,16 +58,16 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> <i class="fa-solid fa-house"></i> Email</a>
-		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"> <i class="fa-solid fa-inbox"></i> Canva</a>
-		<a id="MyASU" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> MyASU</a>
-		<a id="Calendar" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Calendar</a>
-		<a id="Github" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Github</a>
-		<a id="Clients" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Clients</a>
-		<a id="Templates" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-lightbulb"></i> Templates</a>
-		<a id="Squarespace" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-layer-group"></i> Squarespace</a>
-		<a id="Youtube" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Youtube</a>
-		<a id="Pipedrive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bookmark"></i> Pipedrive</a>
+		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> </i> Email</a>
+		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"></i> Canva</a>
+		<a id="MyASU" onclick="navigate(this.id)" href="#"> </i> MyASU</a>
+		<a id="Calendar" onclick="navigate(this.id)" href="#"> </i> Calendar</a>
+		<a id="Github" onclick="navigate(this.id)" href="#"> </i> Github</a>
+		<a id="Clients" onclick="navigate(this.id)" href="#"> </i> Clients</a>
+		<a id="Templates" onclick="navigate(this.id)" href="#"> </i> Templates</a>
+		<a id="Squarespace" onclick="navigate(this.id)" href="#"> </i> Squarespace</a>
+		<a id="Youtube" onclick="navigate(this.id)" href="#"> </i> Youtube</a>
+		<a id="Pipedrive" onclick="navigate(this.id)" href="#"> </i> Pipedrive</a>
 		<a id="LucidChart" onclick="navigate(this.id)" href="#"> </i> LucidChart</a>
 		<a id="Udemy" onclick="navigate(this.id)" href="#"> </i> Udemy</a>
 
