--- a/nav.html
+++ b/nav.html
@@ -33,7 +33,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #FFFFFF;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -45,7 +45,7 @@
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 1px solid #FFFFFF;
 
 		}
 
