--- a/nav.html
+++ b/nav.html
@@ -29,11 +29,11 @@
 			text-align: center;
 			margin: 7px auto;
 			width: fit-content;
-			color: #FFFFFF;
+			color: #F0EAD6;
 		}
 
 		.navMenu a {
-			color: #FFFFFF;
+			color: #F0EAD6;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -45,7 +45,7 @@
 		}
 
 		.border {
-			border: 1px solid #FFFFFF;
+			border: 1px solid #F0EAD6;
 
 		}
 
