--- a/nav.html
+++ b/nav.html
@@ -59,7 +59,7 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> </i> Email</a>
+		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4" style="color:blue;"> </i> Email</a>
 		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"></i> Canva</a>
 		<a id="MyASU" onclick="navigate(this.id)" href="#"> </i> MyASU</a>
 		<a id="Calendar" onclick="navigate(this.id)" href="#"> </i> Calendar</a>
