--- a/homepage_nav.html
+++ b/homepage_nav.html
@@ -59,14 +59,14 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4" style="color:white;"> </i> Email</a>
-		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4" style="color:white;"></i> Canva</a>
-		<a id="Calendar" onclick="navigate(this.id)" href="#" style="color:white;"> </i> Calendar</a>
-		<a id="Clients" onclick="navigate(this.id)" href="#" style="color:white;"> </i> Clients</a>
-		<a id="Templates" onclick="navigate(this.id)" href="#" style="color:white;"> </i> Templates</a>
-		<a id="Squarespace" onclick="navigate(this.id)" href="#" style="color:white;"> </i> Squarespace</a>
-		<a id="Pipedrive" onclick="navigate(this.id)" href="#" style="color:white;"> </i> Pipedrive</a>
-		<a id="LucidChart" onclick="navigate(this.id)" href="#" style="color:white;"> </i> LucidChart</a>
+		<a id="Email" onclick="navigate(this.id)" href="https://www.notion.so/Project-Dashboard-6d8aff764fe643d9a0bd9be2a736b7d3?pvs=4"> </i> Email</a>
+		<a id="Canva" onclick="navigate(this.id)" href="https://www.notion.so/Project-Organizer-59dee3c5279441d8b76f3bed5f269d24?pvs=4"></i> Canva</a>
+		<a id="Calendar" onclick="navigate(this.id)" href="#"> </i> Calendar</a>
+		<a id="Clients" onclick="navigate(this.id)" href="#"> </i> Clients</a>
+		<a id="Templates" onclick="navigate(this.id)" href="#"> </i> Templates</a>
+		<a id="Squarespace" onclick="navigate(this.id)" href="#"> </i> Squarespace</a>
+		<a id="Pipedrive" onclick="navigate(this.id)" href="#"> </i> Pipedrive</a>
+		<a id="LucidChart" onclick="navigate(this.id)" href="#"> </i> LucidChart</a>
 
 
 
